Change History
--------------

2015/12/09, luaotfload v2.6
    * Add ``sign`` target to makefile for automated package signing.
    * Add ``--dumpconf`` option to luaotfload-tool for generating configuration
      files.
    * Move fontloader files to subtree src/fontloader.
    * New script ``mkimport`` facilitates maintainance of code imported from
      Context.
    * Revised letterspacing, now utilizing the ``node.direct`` interface.
    * Revized colorization of fonts, utilizing ``node.direct`` (Dohyun Kim).
    * Colorization was moved to the ``post_linebreak_filter`` stage.
    * Move remaining functionality from ``luaotfload-override`` into
      initialization.
    * Write names index if fonts were removed.
    * Separate module loading from initialization.
    * Custom fontloader package with the files from Lualibs removed.
    * Swappable fontloader via configuration option.
    * Lualibs are now a dependency when used in a TeX run as well.
    * Respect interword spaces when letterspacing.

2014/07/13, luaotfload v2.5
    * Remove legacy code.
    * Remove compatibility with the old mkluatexfontdb script.
    * Remove test directory. Use https://bitbucket.org/phg/lua-la-tex-tests
      instead.
    * Remove luaotfload.lua from luaotfload.dtx; it is now a separate file
      luaotfload-main.lua.
    * Standard source tree structure: the code is now located in the ./doc,
      ./scripts, ./src, ./build, and ./misc directories.
    * Move the heavier LPEG parsers from luaotfload-features (syntax) and
      luaotfload-database (fontconfig) into the new file
      luaotfload-parsers.lua.
    * Move logging routines from luaotfload-override in to luaotfload-log.
    * Scan local font files (``--local`` flag to luaotfload-tool, flag
      ``scan_local`` during TeX run).
    * Add bisection mode (``--bisect``) to luaotfload-tool.
    * Add functions for accessing the database: ``aux.font_index()`` and
      ``aux.read_font_index()``.