@@ -11,7 +11,7 @@ config                            = config     or { }
 luaotfload                        = luaotfload or { }
 local luaotfload                  = luaotfload
 luaotfload.log                    = luaotfload.log or { }
-luaotfload.version                = "2.6"
+luaotfload.version                = "2.7"
 luaotfload.loaders                = { }
 luaotfload.min_luatex_version     = 80             --- i. e. 0.80
 luaotfload.fontloader_package     = "reference"    --- default: from current Context
@@ -29,8 +29,8 @@ local authors = "\z
 
 luaotfload.module = {
     name          = "luaotfload-main",
-    version       = 2.60001,
-    date          = "2015/12/09",
+    version       = 2.70001,
+    date          = "2016/02/19",
     description   = "OpenType layout system.",
     author        = authors,
     copyright     = authors,
