@@ -1,4 +1,4 @@
-%% Copyright (C) 2009-2015
+%% Copyright (C) 2009-2016
 %%
 %%      by  Elie Roux      <elie.roux@telecom-bretagne.eu>
 %%      and Khaled Hosny   <khaledhosny@eglug.org>
@@ -41,7 +41,7 @@
   \ProvidesPackage{luaotfload}%
     %% FIXME  The date is meaningless, we need to find a way to
     %%        use the git revision instead.
-    [2015/12/09 v2.6  OpenType layout system]
+    [2016/02/19 v2.7  OpenType layout system]
 \fi
 \directlua{
 require('luaotfload-main')
